--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Application</title>
+    <style>
+        * {
+            user-select: none;
+            font-family: Tahoma, Geneva, Verdana, sans-serif;
+        }
+
+        tl-chat {
+            left: 20px;
+            bottom: 20px;
+        }
+
+        @media screen and (max-width: 500px) {
+            tl-chat {
+                --townland-chat-width: calc(100vw - 40px) !important;
+                right: 20px;
+            }
+        }
+    </style>
 </head>
 <body>
     <div id="root"></div>
